--- a/support/hotglue2/css/main.css
+++ b/support/hotglue2/css/main.css
@@ -4,8 +4,8 @@ html, body {
 	/* default font */
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 13px;
-	line-height: 1.48em;
-}
+/*	line-height: 1.48em;
+*/}
 
 a, a:link, a:visited, a:active, a:hover {
 	/* this removes the blue color from links on Chrome 7.0.517.41 */
